# activation-rag

./: .gitignore  LICENSE  MODEL_CARD.md  PUBLISHING.md  README.md  pyproject.toml  quickstart.py
configs/: activation_capture_permutations.longmem_core245.json  activation_feature_catalog.section_prefill_proxy.json
docs/: activation-ablation-results-20260612.md  behavior-latent-reranker-experiment-report-20260618.md  real-prefill-telemetry.md
examples/: compare_activation_search.py
scripts/: audit_candidate_movements.py  audit_group_leakage.py  audit_reranker_comparison.py  benchmark_behavior_prefill_speed.py  build_beir_dense_cache.py  build_caa_em_feature_arm_cache.py  build_core245_permutation_groups.py  build_core245_subset_manifests.py  capture_beir_telemetry_cache.py  capture_caa_em_prefill.py  capture_group_telemetry_cache.py  capture_qwen_sae_prefill.py  capture_sidecar_prefill.py  compare_behavior_latent_pilot.py  deep_activation_reranker_diagnostics.py  diagnose_caa_em_cache.py  diagnose_core245_feature_signal.py  download_benchmarks.py  embed_remote_sentence_transformers.py  embed_sentence_transformers.py  evaluate_activation_representation_searcher.py  evaluate_direct_blend_activation_searcher.py  evaluate_meta_activation_representation_searcher.py  materialize_behavior_telemetry_cache.py  merge_reranker_groups.py  monitor_scifact_fixed_zero.py  monitor_section_prefill_recapture.sh  prepare_activation_reranker_training.py  prepare_behavior_latent_reranker_pilot.py  prepare_caa_prefill_requests.py  prepare_coir_groups.py  prepare_dense_candidate_groups.py  (+26 more)
(+76 files in other folders)
